Sauvegarde du projet

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,18 +9,5 @@
   "scope": "/",
   "description": "Aprenda crioulo cabo-verdiano para pregação",
   "prefer_related_applications": false,
-  "icons": [
-    {
-      "src": "/android-chrome-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/android-chrome-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable any"
-    }
-  ]
+  "icons": []
 }
