Modifications finales et préparation pour APK

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,21 +1,13 @@
 {
   "appId": "com.kriolujw.app",
   "appName": "KBVLYON",
-  "webDir": "public",
+  "webDir": "dist",
   "bundledWebRuntime": false,
   "server": {
     "androidScheme": "https"
   },
-  "plugins": {
-    "SplashScreen": {
-      "launchShowDuration": 3000,
-      "launchAutoHide": true,
-      "backgroundColor": "#1A73E8",
-      "androidSplashResourceName": "splash",
-      "androidScaleType": "CENTER_CROP",
-      "showSpinner": false,
-      "splashFullScreen": true,
-      "splashImmersive": true
-    }
+  "plugins": {},
+  "android": {
+    "fullscreen": false 
   }
 }
