--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/android": "^7.3.0",
     "@capacitor/cli": "^7.3.0",
+    "@capacitor/status-bar": "^7.0.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.2.3",
@@ -29,6 +31,7 @@
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.5",
     "@emotion/babel-plugin": "^11.13.5",
     "@emotion/react": "^11.14.0",
     "@eslint/js": "^9.28.0",
