--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.16.0",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.511.0",
     "next": "^15.3.3",
     "next-themes": "^0.4.6",
