--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@stagewise/toolbar-react": "^0.2.0",
+    "@types/react-datepicker": "^6.2.0",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.16.0",
@@ -26,8 +28,10 @@
     "lucide-react": "^0.511.0",
     "next": "^15.3.3",
     "next-themes": "^0.4.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.4.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^7.6.1",
     "tailwind-merge": "^3.3.0"
   },
