feat(notes): ajout des onglets Chronomètre et Statistiques
- Implémentation complète du chronomètre avec tours
- Ajout des statistiques de temps passé
- Correction des erreurs de lint et amélioration de la structure du code

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "com.kriolujw.app",
+  "appId": "com.kbvlyon.app",
   "appName": "KBVLYON",
   "webDir": "dist",
   "bundledWebRuntime": false,
@@ -8,6 +8,6 @@
   },
   "plugins": {},
   "android": {
-    "fullscreen": false 
+    "fullscreen": false
   }
 }
