--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,7 +13,8 @@
       "@/hooks/*": ["./src/hooks/*"],
       "@/lib/*": ["./src/lib/*"],
       "@/styles/*": ["./src/styles/*"],
-      "@/types/*": ["./src/types/*"]
+      "@/types/*": ["./src/types/*"],
+      "@/data/*": ["./src/data/*"]
     },
 
     /* Bundler mode */
