--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@capacitor/android": "^7.3.0",
-    "@capacitor/cli": "^7.3.0",
+    "@capacitor/android": "^7.4.0",
+    "@capacitor/cli": "^7.4.0",
+    "@capacitor/core": "^7.4.0",
     "@capacitor/status-bar": "^7.0.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
-    "@stagewise/toolbar-react": "^0.2.0",
+    "@stagewise/toolbar": "^0.4.8",
+    "@stagewise/toolbar-react": "^0.4.8",
     "@types/react-datepicker": "^6.2.0",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
@@ -40,7 +42,6 @@
     "@emotion/babel-plugin": "^11.13.5",
     "@emotion/react": "^11.14.0",
     "@eslint/js": "^9.28.0",
-    "@stagewise/toolbar": "^0.3.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/line-clamp": "^0.4.4",
