--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,31 @@
 {
   "name": "KBVLYON - Application de gestion",
   "short_name": "KBVLYON",
-  "start_url": "/",
+  "start_url": "/?utm_source=pwa_homescreen",
   "display": "standalone",
   "background_color": "#1A73E8",
   "theme_color": "#1A73E8",
-  "orientation": "portrait",
+  "orientation": "any",
   "scope": "/",
-  "description": "Aprenda crioulo cabo-verdiano para pregação",
+  "description": "Application d'apprentissage de créole cap-verdien",
   "prefer_related_applications": false,
+  "categories": ["education", "languages", "productivity"],
+  "screenshots": [],
+  "shortcuts": [
+    {
+      "name": "Commencer l'apprentissage",
+      "short_name": "Apprendre",
+      "description": "Commencer une nouvelle leçon",
+      "url": "/lessons?source=pwa_shortcut"
+    },
+    {
+      "name": "Révision",
+      "short_name": "Révision",
+      "description": "Réviser les leçons précédentes",
+      "url": "/revision?source=pwa_shortcut"
+    }
+  ],
+  "handle_links": "preferred",
   "icons": [
     {
       "src": "../icons/icon-48.webp",
