Fix npm dependencies and translations - remove English display, align React versions

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "com.kbvlyon.app",
+  "appId": "com.kbv.lyon",
   "appName": "KBVLYON",
   "webDir": "dist",
   "bundledWebRuntime": false,
