--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/package.json",
   "name": "vite-react-typescript-starter",
   "private": true,
   "version": "0.0.0",
@@ -8,7 +9,8 @@
     "dev:edge": "start msedge http://localhost:3000 && vite --port 3000",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "extract-pdf": "node scripts/extractPdfData.cjs"
   },
   "dependencies": {
     "@capacitor/android": "^7.4.0",
@@ -21,53 +23,54 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@stagewise/toolbar": "^0.4.8",
     "@stagewise/toolbar-react": "^0.4.8",
-    "@types/react-datepicker": "^6.2.0",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.16.0",
     "fuse.js": "^7.1.0",
-    "lucide-react": "^0.511.0",
-    "next": "^15.3.3",
-    "next-themes": "^0.4.6",
-    "react": "^18.2.0",
+    "i18next": "^23.11.5",
+    "lucide-react": "^0.344.0",
+    "next-themes": "^0.3.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
-    "react-datepicker": "^8.4.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^7.6.1",
-    "tailwind-merge": "^3.3.0"
+    "react-dom": "^18.3.1",
+    "react-i18next": "^13.5.0",
+    "react-loading-skeleton": "^3.5.0",
+    "react-router-dom": "^6.22.3",
+    "tailwind-merge": "^3.3.0",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "@capacitor/assets": "^3.0.5",
-    "@emotion/babel-plugin": "^11.13.5",
-    "@emotion/react": "^11.14.0",
+    "@emotion/babel-plugin": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@eslint/js": "^9.28.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^22.15.30",
-    "@types/react": "^19.1.6",
-    "@types/react-dom": "^19.1.5",
-    "@vitejs/plugin-react": "^4.7.0",
+    "@tailwindcss/typography": "^0.5.12",
+    "@types/node": "^20.11.17",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.28.0",
+    "eslint": "^8.57.1",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.2.0",
-    "postcss": "^8.5.4",
-    "postcss-import": "^16.1.0",
-    "postcss-nested": "^7.0.2",
-    "postcss-preset-env": "^10.2.1",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "globals": "^13.24.0",
+    "postcss": "^8.4.38",
+    "postcss-import": "^15.1.0",
+    "postcss-nested": "^6.0.1",
+    "postcss-preset-env": "^9.3.0",
     "postcss-scss": "^4.0.9",
-    "stylelint": "^16.20.0",
-    "stylelint-config-standard-scss": "^15.0.1",
-    "tailwindcss": "^3.4.17",
+    "stylelint": "^16.3.1",
+    "stylelint-config-standard-scss": "^13.0.0",
+    "tailwindcss": "^3.4.9",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.33.1",
-    "vite": "^6.3.5",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.13.1",
+    "vite": "^5.2.11",
     "vite-plugin-image-optimizer": "^1.1.8"
   }
 }
