Centre navbar items and refine header icons

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ DATABASE_URL="file:./dev.db"
 
 # Environment (development, production)
 NODE_ENV=development
+
+# OpenAI API Key for AI assistant
+VITE_OPENAI_API_KEY=your_api_key_here
