--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,6 +7,7 @@
   "theme_color": "#1A73E8",
   "orientation": "any",
   "scope": "/",
+  "version": "1.10.1",
   "description": "Application d'apprentissage de créole cap-verdien",
   "prefer_related_applications": false,
   "categories": ["education", "languages", "productivity"],
