--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "csv-parse": "^6.1.0",
     "fast-xml-parser": "^5.3.0",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
@@ -45,7 +46,8 @@
     "react-i18next": "^13.5.0",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^6.22.3",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "translate-google": "^1.5.0"
   },
   "devDependencies": {
     "@capacitor/assets": "^3.0.5",
