--- a/package.json
+++ b/package.json
@@ -76,11 +76,12 @@
     "postcss-scss": "^4.0.9",
     "stylelint": "^16.3.1",
     "stylelint-config-standard-scss": "^13.0.0",
+    "svgo": "^4.0.0",
     "tailwindcss": "^3.4.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.13.1",
-    "vite": "^5.2.11",
+    "vite": "^7.2.4",
     "vite-plugin-image-optimizer": "^1.1.8"
   }
 }
